Added exclusive car (Dinosaure).

--- a/src/cars/_car-config.scss
+++ b/src/cars/_car-config.scss
@@ -298,6 +298,15 @@ $car-configs-exclusive: (
       shadow-width: 100%,
       shadow-space: 40%,
     ),
+  // Dinosaure
+  "car1018":
+    (
+      shadow-width: 90%,
+      shadow-height: 30%,
+      shadow-opacity: 0.2,
+      shadow-space: null,
+      shadow-offset-x: -5px,
+    ),
   // Tumbler
   "car1023":
     (
