Fix avatar border color and update rank color styles
- Removed the alpha channel from the avatar border color in avatar.scss for consistency.
- Added a missing comma in the rank colors map in nameRankColor.scss.
- Reformatted the rank styles generation for better readability.

--- a/src/nameRankColor.scss
+++ b/src/nameRankColor.scss
@@ -12,17 +12,17 @@ $rank-colors: (
   8: $rang8,
   9: $rang9,
   10: $rang10,
-  11: $rang11
+  11: $rang11,
 );
 
 // Generate rank styles using a loop
-#content, #popup {
+#content,
+#popup {
   @each $rank, $color in $rank-colors {
-    .rang#{$rank}, 
-    a.rang#{$rank}, 
+    .rang#{$rank},
+    a.rang#{$rank},
     a.rang#{$rank}:visited {
       color: $color !important;
-      border: 2px solid darken($color, 10%) !important;
     }
   }
 }
