--- a/src/avatar.scss
+++ b/src/avatar.scss
@@ -25,7 +25,7 @@
     font-weight: bold;
     white-space: nowrap;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2) !important;
-    border: 2px solid #{$rang1}CC;
+    border: 2px solid #{$rang1};
     margin: 0 !important;
     min-height: 20px;
     cursor: help;
