--- a/src/vocabularies.scss
+++ b/src/vocabularies.scss
@@ -11,53 +11,66 @@
   }
 
   table {
-    margin-bottom: 10px !important;
-    display: block !important;
-
     tbody {
-      display: block !important;
+      display: grid !important;
       width: 100% !important;
-      column-count: 3 !important;
-      column-gap: 5px !important;
+      grid-template-columns: repeat(3, 1fr) !important;
+      gap: 5px !important;
       align-items: center !important;
 
       tr {
-        padding-left: 10px !important;
+        border-radius: 5px !important;
+        border: 1px solid darken($gray, 15%) !important;
+        padding: 10px !important;
         display: block !important;
-        -webkit-column-break-inside: avoid;
-        page-break-inside: avoid;
-        break-inside: avoid;
-
-        &:nth-child(even) {
-          background: rgba(255, 255, 255, 0.05) !important;
-        }
-
-        &:nth-child(odd) {
-          background: rgba(0, 0, 0, 0.3) !important;
-        }
+        height: 100% !important;
+        background-color: darken($darkgray, 2%) !important;
 
         td {
           &.title {
-            width: 60% !important;
-            display: inline-block !important;
+            width: 100% !important;
+            padding: 5px 0 !important;
 
-            .author {
-              a {
-                color: $blue !important;
+            .btn_play,
+            .btn_fav,
+            .remove {
+              width: 80px !important;
+            }
 
-                &:hover {
-                  color: $lightblue !important;
-                }
-              }
+            .btn_fav {
+              filter: invert(0.8) !important;
+            }
+
+            .remove {
+              color: $red !important;
             }
           }
 
-          &.symbols,
+          &.symbols {
+            width: calc(100% - 30px) !important;
+            padding: 5px 0 !important;
+            display: inline-flex !important;
+            align-items: center !important;
+            color: $lightblue !important;
+
+            strong {
+              color: $orange !important;
+              background-color: darken($orange, 30%) !important;
+              padding: 2px 5px !important;
+              margin-right: 10px !important;
+              border-radius: 3px !important;
+            }
+
+            i {
+              color: $gray !important;
+              margin-right: 2px !important;
+            }
+          }
+
           &.popularity {
-            width: 18% !important;
-            display: inline-block !important;
-            margin: 0 !important;
-            padding: 0 !important;
+            display: inline-flex !important;
+            width: 24px !important;
+            height: 24px !important;
           }
         }
       }
@@ -94,19 +107,6 @@
 
     > h4 {
       display: none !important;
-    }
-  }
-
-  .remove {
-    background: #622020 $rmvoc no-repeat 5px 4px !important;
-    color: $red !important;
-    padding: 3px 25px !important;
-    border: 1px solid $red !important;
-    transition: all 0.2s !important;
-    background-size: 9px !important;
-
-    &:hover {
-      filter: hue-rotate(60deg) !important;
     }
   }
 }
@@ -201,14 +201,6 @@
 }
 
 /* Button styles */
-.btn80 {
-  background: $blue !important;
-
-  &:hover {
-    background: $orange !important;
-  }
-}
-
 .play {
   background: $orange !important;
 }
@@ -251,21 +243,6 @@ body {
 
     h3 {
       display: none !important;
-    }
-  }
-
-  .voclist {
-    .remove {
-      background: #622020 $rmvoc no-repeat 5px 4px !important;
-      color: $red !important;
-      padding: 3px 25px !important;
-      border: 1px solid $red !important;
-      transition: all 0.2s !important;
-      background-size: 9px !important;
-
-      &:hover {
-        filter: hue-rotate(60deg) !important;
-      }
     }
   }
 
