Full restyle and selectors order review. Also added better adaptivity for vocabularies.scss.

--- a/src/main.scss
+++ b/src/main.scss
@@ -49,7 +49,7 @@
 @import "home";
 @import "login";
 @import "./profile/profile";
-@import "vocabularies";
+@import "./vocabularies/vocabularies";
 @import "gamelist";
 @import "gametypes";
 @import "createGame";
