fix.scss zaz 965 added 1_0

--- a/src/cars/_fix.scss
+++ b/src/cars/_fix.scss
@@ -57,7 +57,7 @@ $car-tuning-masks: (
   // ZAZ_965
   "car1":
     (
-      "class": "1_1, 1_2, 1_3, 1_4, 2_0, 2_1, 2_2",
+      "class": "1_0, 1_1, 1_2, 1_3, 1_4, 2_0, 2_1, 2_2",
     ),
   // VAZ_2104
   "car2":
