Restyle for trimenu.

--- a/src/main.scss
+++ b/src/main.scss
@@ -27,6 +27,7 @@
 @import "avatar";
 @import "./userPanel/userPanel";
 @import "./mainMenu/mainMenu";
+@import "floating-navigation";
 @import "recentGames";
 
 // -----------------------------------------------------------------------------
