--- a/src/mainMenu/mainMenu.scss
+++ b/src/mainMenu/mainMenu.scss
@@ -31,6 +31,7 @@
 
       a:first-child {
         border-bottom-right-radius: 5px !important;
+        border-right: none !important;
       }
 
       a:last-child {
