--- a/src/floating-navigation.scss
+++ b/src/floating-navigation.scss
@@ -1,62 +1,63 @@
-#content .menu {
-  display: flex !important;
-  flex-direction: row !important;
+#content .menu,
+#content .content-col {
+  .trimenu {
+    user-select: none !important;
+    font: 700 11px "Montserrat", sans-serif !important;
+    text-transform: uppercase !important;
+    display: inline-flex !important;
+    margin: 10px 0 !important;
 
-  dd {
-    margin: 0 !important;
+    li {
+      margin: 0 !important;
+      padding: 0 15px !important;
+      height: 45px !important;
+      width: fit-content !important;
+      float: none !important;
+      display: flex;
+      align-items: center !important;
+      justify-content: center !important;
+      background: $gray !important;
+      border-right: 1px solid $darkgray !important;
 
-    .trimenu {
-      font: 700 11px "Montserrat", sans-serif !important;
-      text-transform: uppercase !important;
-      display: inline-flex !important;
+      // Garbage button with empty content
+      &.dummy {
+        display: none !important;
+      }
 
-      li {
-        margin: 0 !important;
-        padding: 0 !important;
-        height: 45px !important;
-        width: 140px !important;
-        float: none !important;
-        display: flex;
+      &.active {
+        background: darken($blue, 5%) !important;
+        color: $black !important;
+      }
+
+      &:hover:not(.active) {
+        background: lighten($blue, 5%) !important;
+        cursor: pointer !important;
+      }
+
+      &:first-child {
+        border-radius: 5px 0 0 5px !important;
+      }
+
+      &:nth-child(4) {
+        border-radius: 0 5px 5px 0 !important;
+        border-right: none !important;
+      }
+
+      a {
+        text-decoration: none !important;
+        height: 100% !important;
+        width: 100% !important;
+        display: flex !important;
         align-items: center !important;
         justify-content: center !important;
-        background: $gray !important;
-        border-right: 1px solid $darkgray !important;
+        color: $black !important;
+      }
 
-        &.active {
-          background: darken($blue, 5%) !important;
-          color: $black !important;
-        }
-
-        &:hover:not(.active) {
-          background: lighten($blue, 5%) !important;
-        }
-
-        // Move the first-child and last-child selectors here
-        &:first-child {
-          border-radius: 5px 0 0 5px !important;
-        }
-
-        &:last-child {
-          border-radius: 0 5px 5px 0 !important;
-          border-right: none !important;
-        }
-
-        a {
-          text-decoration: none !important;
-          height: 100% !important;
-          width: 100% !important;
-          display: flex !important;
-          align-items: center !important;
-          justify-content: center !important;
-          color: $black !important;
-        }
-
-        sub {
-          position: absolute !important;
-          top: 10px !important;
-          font-size: 0.8em !important;
-          color: $darkgray !important;
-        }
+      sub {
+        position: absolute !important;
+        top: 10px !important;
+        font-size: 0.8em !important;
+        color: $darkgray !important;
       }
     }
   }
