--- a/src/userPanel/userPanel.scss
+++ b/src/userPanel/userPanel.scss
@@ -46,6 +46,17 @@ $buttonHeight: 44px;
   background: $deepgray !important;
   color: $gray !important;
 
+  &::before {
+    content: "";
+    position: absolute;
+    bottom: -60px !important;
+    left: 0;
+    width: 100%;
+    height: 60px !important;
+    background: linear-gradient(to bottom, $darkgray 0%, $darkgray 80%, transparent 100%) !important;
+    z-index: -1 !important;
+  }
+
   /* USER BLOCK CONTAINER */
 
   .user-block {
