--- a/src/chat.scss
+++ b/src/chat.scss
@@ -79,9 +79,7 @@
       background: transparent !important;
       transition: filter 0.15s !important;
       filter: brightness(0.5) !important;
-      background-image: $minimize-icon !important;
-      background-position: center !important;
-      background-repeat: no-repeat !important;
+      background: $minimize-icon no-repeat center / contain !important;
 
       &:hover {
         background-image: $minimize-icon !important;
@@ -95,9 +93,7 @@
       background-color: transparent !important;
       filter: brightness(0.5) !important;
       transition: filter 0.15s !important;
-      background-image: $close-icon !important;
-      background-repeat: no-repeat !important;
-      background-position: center !important;
+      background: $close-icon no-repeat center / contain !important;
 
       &:hover {
         background-image: $close-icon;
