--- a/src/userPanel/userPanel.scss
+++ b/src/userPanel/userPanel.scss
@@ -49,7 +49,8 @@ $buttonHeight: 44px;
   &::before {
     content: "";
     position: absolute;
-    bottom: -60px !important;
+    // Additional 1px to cover the border bottom
+    bottom: -61px !important; 
     left: 0;
     width: 100%;
     height: 60px !important;
