--- a/src/floating-navigation.scss
+++ b/src/floating-navigation.scss
@@ -18,6 +18,7 @@
       justify-content: center !important;
       background: $gray !important;
       border-right: 1px solid $darkgray !important;
+      transition: background 0.15s ease !important;
 
       // Garbage button with empty content
       &.dummy {
