--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -1,4 +1,14 @@
+@import "../mixins";
+
 #content #profile-block {
+  display: grid !important;
+  grid-template-areas:
+    "title title"
+    "menu menu"
+    "content right";
+  grid-template-columns: 65% 35%;
+  grid-template-rows: auto auto 1fr;
+
   dl {
     margin: 10px 0 !important;
   }
@@ -8,6 +18,9 @@
   }
 
   .user-title {
+    grid-area: title;
+    width: 100% !important;
+
     .btn_fav {
       filter: invert(1) !important;
     }
@@ -20,8 +33,9 @@
   }
 
   .right-col {
-    padding: 0 0 0 10px !important;
-    width: 50% !important;
+    grid-area: right;
+    width: 100% !important;
+    padding: 0 !important;
 
     .comments {
       background: $black !important;
@@ -34,6 +48,44 @@
 
         img {
           visibility: hidden !important;
+        }
+      }
+
+      .comment {
+        display: flex !important;
+        position: relative !important;
+        margin: 25px 0 15px !important;
+
+        b,
+        br {
+          display: contents !important;
+        }
+
+        .info[style*="avatars/"] {
+          width: 32px !important;
+          height: 32px !important;
+          padding-left: 40px !important;
+
+          &::before {
+            @include avatar-mask(4, 32px);
+          }
+        }
+
+        .info {
+          .author,
+          .date {
+            position: absolute !important;
+            top: -15px !important;
+          }
+
+          .author {
+            left: 85px !important;
+          }
+
+          .date {
+            left: 0 !important;
+            width: 80px !important;
+          }
         }
       }
 
@@ -78,9 +130,29 @@
     }
   }
 
+  .menu {
+    grid-area: menu;
+    width: 100% !important;
+  }
+
   .user-content {
+    margin-top: 0 !important;
+    grid-area: content;
+    width: 100% !important;
+
     dt {
       width: 100px !important;
+    }
+
+    dd[style*="avatars/"] {
+      padding-left: 40px !important;
+      width: 32px !important;
+      height: 32px !important;
+      position: relative !important;
+
+      &::before {
+        @include avatar-mask(4, 32px);
+      }
     }
 
     dd {
