--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -1,16 +1,17 @@
 @import "../mixins";
 
 #content #profile-block {
+  margin-top: 10px !important;
   display: grid !important;
   grid-template-areas:
-    "title title"
-    "menu menu"
+    "title right"
+    "menu right"
     "content right";
   grid-template-columns: 65% 35%;
   grid-template-rows: auto auto 1fr;
 
   dl {
-    margin: 10px 0 !important;
+    margin: 10px 0 0 !important;
   }
 
   dd {
@@ -41,6 +42,7 @@
       background: $black !important;
       border: 1px solid $blue !important;
       overflow: hidden !important;
+      height: 100% !important;
 
       .rss {
         top: 0 !important;
@@ -136,6 +138,7 @@
   }
 
   .user-content {
+    clear: unset !important;
     margin-top: 0 !important;
     grid-area: content;
     width: 100% !important;
@@ -160,6 +163,7 @@
       background-color: transparent !important;
 
       .words {
+        width: fit-content !important;
         border: 1px solid $blue !important;
         background-color: $black !important;
 
