vocabulary.scss fix #2

--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -61,7 +61,9 @@
         margin: 25px 0 15px !important;
 
         b,
-        br {
+        br,
+        .quotetop,
+        .quotemain {
           display: contents !important;
         }
 
