vocabulary.scss fix #3

--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -60,7 +60,10 @@
         position: relative !important;
         margin: 25px 0 15px !important;
 
+        a,
+        i,
         b,
+        strong,
         br,
         .quotetop,
         .quotemain {
