--- a/src/profile/_root.scss
+++ b/src/profile/_root.scss
@@ -239,7 +239,7 @@
   }
 
   .caret {
-    border-top: 4px solid $lightblue !important;
+    border-top-color: $lightblue !important;
   }
 
   &:hover,
