mixions.scss changed avatar-mask mixin. including background variable. also vocabulary.scss added propert background as parameter.

--- a/src/vocabularies/vocabulary.scss
+++ b/src/vocabularies/vocabulary.scss
@@ -75,7 +75,7 @@
           padding-left: 40px !important;
 
           &::before {
-            @include avatar-mask(4, 32px);
+            @include avatar-mask(4, 32px, $black);
           }
         }
 
@@ -162,7 +162,7 @@
       position: relative !important;
 
       &::before {
-        @include avatar-mask(4, 32px);
+        @include avatar-mask(4, 32px, $darkgray);
       }
     }
 
