--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -1,11 +1,11 @@
-@mixin avatar-mask($radius: 4, $dimensions: 32px) {
+@mixin avatar-mask($radius: 4, $dimensions: 32px, $background: transparent) {
   content: "";
   position: absolute;
   top: 0;
   left: 0;
   width: $dimensions;
   height: $dimensions;
-  background: black !important;
+  background: $background;
   mask: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='32' height='32'><rect width='32' height='32' rx='#{$radius}' ry='#{$radius}' fill='black'/></svg>") no-repeat,
     linear-gradient(#000 0 0);
   mask-composite: exclude;
